docs/upbound-provider-azure/0.29/recoveryservices/v1beta1/siteRecoveryProtectionContainerMapping.md
---
permalink: /upbound-provider-azure/0.29/recoveryservices/v1beta1/siteRecoveryProtectionContainerMapping/
---

# recoveryservices.v1beta1.siteRecoveryProtectionContainerMapping

"SiteRecoveryProtectionContainerMapping is the Schema for the SiteRecoveryProtectionContainerMappings API. Manages a Site Recovery protection container mapping on Azure."

## Index

* [`fn new(name)`](#fn-new)
* [`obj metadata`](#obj-metadata)
  * [`fn withAnnotations(annotations)`](#fn-metadatawithannotations)
  * [`fn withAnnotationsMixin(annotations)`](#fn-metadatawithannotationsmixin)
  * [`fn withClusterName(clusterName)`](#fn-metadatawithclustername)
  * [`fn withCreationTimestamp(creationTimestamp)`](#fn-metadatawithcreationtimestamp)
  * [`fn withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)`](#fn-metadatawithdeletiongraceperiodseconds)
  * [`fn withDeletionTimestamp(deletionTimestamp)`](#fn-metadatawithdeletiontimestamp)
  * [`fn withFinalizers(finalizers)`](#fn-metadatawithfinalizers)
  * [`fn withFinalizersMixin(finalizers)`](#fn-metadatawithfinalizersmixin)
  * [`fn withGenerateName(generateName)`](#fn-metadatawithgeneratename)
  * [`fn withGeneration(generation)`](#fn-metadatawithgeneration)
  * [`fn withLabels(labels)`](#fn-metadatawithlabels)
  * [`fn withLabelsMixin(labels)`](#fn-metadatawithlabelsmixin)
  * [`fn withName(name)`](#fn-metadatawithname)
  * [`fn withNamespace(namespace)`](#fn-metadatawithnamespace)
  * [`fn withOwnerReferences(ownerReferences)`](#fn-metadatawithownerreferences)
  * [`fn withOwnerReferencesMixin(ownerReferences)`](#fn-metadatawithownerreferencesmixin)
  * [`fn withResourceVersion(resourceVersion)`](#fn-metadatawithresourceversion)
  * [`fn withSelfLink(selfLink)`](#fn-metadatawithselflink)
  * [`fn withUid(uid)`](#fn-metadatawithuid)
* [`obj spec`](#obj-spec)
  * [`fn withDeletionPolicy(deletionPolicy)`](#fn-specwithdeletionpolicy)
  * [`obj spec.forProvider`](#obj-specforprovider)
    * [`fn withAutomaticUpdate(automaticUpdate)`](#fn-specforproviderwithautomaticupdate)
    * [`fn withAutomaticUpdateMixin(automaticUpdate)`](#fn-specforproviderwithautomaticupdatemixin)
    * [`fn withRecoveryFabricName(recoveryFabricName)`](#fn-specforproviderwithrecoveryfabricname)
    * [`fn withRecoveryReplicationPolicyId(recoveryReplicationPolicyId)`](#fn-specforproviderwithrecoveryreplicationpolicyid)
    * [`fn withRecoverySourceProtectionContainerName(recoverySourceProtectionContainerName)`](#fn-specforproviderwithrecoverysourceprotectioncontainername)
    * [`fn withRecoveryTargetProtectionContainerId(recoveryTargetProtectionContainerId)`](#fn-specforproviderwithrecoverytargetprotectioncontainerid)
    * [`fn withRecoveryVaultName(recoveryVaultName)`](#fn-specforproviderwithrecoveryvaultname)
    * [`fn withResourceGroupName(resourceGroupName)`](#fn-specforproviderwithresourcegroupname)
    * [`obj spec.forProvider.automaticUpdate`](#obj-specforproviderautomaticupdate)
      * [`fn withAutomationAccountId(automationAccountId)`](#fn-specforproviderautomaticupdatewithautomationaccountid)
      * [`fn withEnabled(enabled)`](#fn-specforproviderautomaticupdatewithenabled)
    * [`obj spec.forProvider.recoveryFabricNameRef`](#obj-specforproviderrecoveryfabricnameref)
      * [`fn withName(name)`](#fn-specforproviderrecoveryfabricnamerefwithname)
      * [`obj spec.forProvider.recoveryFabricNameRef.policy`](#obj-specforproviderrecoveryfabricnamerefpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderrecoveryfabricnamerefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderrecoveryfabricnamerefpolicywithresolve)
    * [`obj spec.forProvider.recoveryFabricNameSelector`](#obj-specforproviderrecoveryfabricnameselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforproviderrecoveryfabricnameselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specforproviderrecoveryfabricnameselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforproviderrecoveryfabricnameselectorwithmatchlabelsmixin)
      * [`obj spec.forProvider.recoveryFabricNameSelector.policy`](#obj-specforproviderrecoveryfabricnameselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderrecoveryfabricnameselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderrecoveryfabricnameselectorpolicywithresolve)
    * [`obj spec.forProvider.recoveryReplicationPolicyIdRef`](#obj-specforproviderrecoveryreplicationpolicyidref)
      * [`fn withName(name)`](#fn-specforproviderrecoveryreplicationpolicyidrefwithname)
      * [`obj spec.forProvider.recoveryReplicationPolicyIdRef.policy`](#obj-specforproviderrecoveryreplicationpolicyidrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderrecoveryreplicationpolicyidrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderrecoveryreplicationpolicyidrefpolicywithresolve)
    * [`obj spec.forProvider.recoveryReplicationPolicyIdSelector`](#obj-specforproviderrecoveryreplicationpolicyidselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforproviderrecoveryreplicationpolicyidselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specforproviderrecoveryreplicationpolicyidselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforproviderrecoveryreplicationpolicyidselectorwithmatchlabelsmixin)
      * [`obj spec.forProvider.recoveryReplicationPolicyIdSelector.policy`](#obj-specforproviderrecoveryreplicationpolicyidselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderrecoveryreplicationpolicyidselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderrecoveryreplicationpolicyidselectorpolicywithresolve)
    * [`obj spec.forProvider.recoverySourceProtectionContainerNameRef`](#obj-specforproviderrecoverysourceprotectioncontainernameref)
      * [`fn withName(name)`](#fn-specforproviderrecoverysourceprotectioncontainernamerefwithname)
      * [`obj spec.forProvider.recoverySourceProtectionContainerNameRef.policy`](#obj-specforproviderrecoverysourceprotectioncontainernamerefpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderrecoverysourceprotectioncontainernamerefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderrecoverysourceprotectioncontainernamerefpolicywithresolve)
    * [`obj spec.forProvider.recoverySourceProtectionContainerNameSelector`](#obj-specforproviderrecoverysourceprotectioncontainernameselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforproviderrecoverysourceprotectioncontainernameselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specforproviderrecoverysourceprotectioncontainernameselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforproviderrecoverysourceprotectioncontainernameselectorwithmatchlabelsmixin)
      * [`obj spec.forProvider.recoverySourceProtectionContainerNameSelector.policy`](#obj-specforproviderrecoverysourceprotectioncontainernameselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderrecoverysourceprotectioncontainernameselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderrecoverysourceprotectioncontainernameselectorpolicywithresolve)
    * [`obj spec.forProvider.recoveryTargetProtectionContainerIdRef`](#obj-specforproviderrecoverytargetprotectioncontaineridref)
      * [`fn withName(name)`](#fn-specforproviderrecoverytargetprotectioncontaineridrefwithname)
      * [`obj spec.forProvider.recoveryTargetProtectionContainerIdRef.policy`](#obj-specforproviderrecoverytargetprotectioncontaineridrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderrecoverytargetprotectioncontaineridrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderrecoverytargetprotectioncontaineridrefpolicywithresolve)
    * [`obj spec.forProvider.recoveryTargetProtectionContainerIdSelector`](#obj-specforproviderrecoverytargetprotectioncontaineridselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforproviderrecoverytargetprotectioncontaineridselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specforproviderrecoverytargetprotectioncontaineridselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforproviderrecoverytargetprotectioncontaineridselectorwithmatchlabelsmixin)
      * [`obj spec.forProvider.recoveryTargetProtectionContainerIdSelector.policy`](#obj-specforproviderrecoverytargetprotectioncontaineridselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderrecoverytargetprotectioncontaineridselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderrecoverytargetprotectioncontaineridselectorpolicywithresolve)
    * [`obj spec.forProvider.recoveryVaultNameRef`](#obj-specforproviderrecoveryvaultnameref)
      * [`fn withName(name)`](#fn-specforproviderrecoveryvaultnamerefwithname)
      * [`obj spec.forProvider.recoveryVaultNameRef.policy`](#obj-specforproviderrecoveryvaultnamerefpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderrecoveryvaultnamerefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderrecoveryvaultnamerefpolicywithresolve)
    * [`obj spec.forProvider.recoveryVaultNameSelector`](#obj-specforproviderrecoveryvaultnameselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforproviderrecoveryvaultnameselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specforproviderrecoveryvaultnameselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforproviderrecoveryvaultnameselectorwithmatchlabelsmixin)
      * [`obj spec.forProvider.recoveryVaultNameSelector.policy`](#obj-specforproviderrecoveryvaultnameselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderrecoveryvaultnameselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderrecoveryvaultnameselectorpolicywithresolve)
    * [`obj spec.forProvider.resourceGroupNameRef`](#obj-specforproviderresourcegroupnameref)
      * [`fn withName(name)`](#fn-specforproviderresourcegroupnamerefwithname)
      * [`obj spec.forProvider.resourceGroupNameRef.policy`](#obj-specforproviderresourcegroupnamerefpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderresourcegroupnamerefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderresourcegroupnamerefpolicywithresolve)
    * [`obj spec.forProvider.resourceGroupNameSelector`](#obj-specforproviderresourcegroupnameselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforproviderresourcegroupnameselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specforproviderresourcegroupnameselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforproviderresourcegroupnameselectorwithmatchlabelsmixin)
      * [`obj spec.forProvider.resourceGroupNameSelector.policy`](#obj-specforproviderresourcegroupnameselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderresourcegroupnameselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderresourcegroupnameselectorpolicywithresolve)
  * [`obj spec.providerConfigRef`](#obj-specproviderconfigref)
    * [`fn withName(name)`](#fn-specproviderconfigrefwithname)
    * [`obj spec.providerConfigRef.policy`](#obj-specproviderconfigrefpolicy)
      * [`fn withResolution(resolution)`](#fn-specproviderconfigrefpolicywithresolution)
      * [`fn withResolve(resolve)`](#fn-specproviderconfigrefpolicywithresolve)
  * [`obj spec.providerRef`](#obj-specproviderref)
    * [`fn withName(name)`](#fn-specproviderrefwithname)
    * [`obj spec.providerRef.policy`](#obj-specproviderrefpolicy)
      * [`fn withResolution(resolution)`](#fn-specproviderrefpolicywithresolution)
      * [`fn withResolve(resolve)`](#fn-specproviderrefpolicywithresolve)
  * [`obj spec.publishConnectionDetailsTo`](#obj-specpublishconnectiondetailsto)
    * [`fn withName(name)`](#fn-specpublishconnectiondetailstowithname)
    * [`obj spec.publishConnectionDetailsTo.configRef`](#obj-specpublishconnectiondetailstoconfigref)
      * [`fn withName(name)`](#fn-specpublishconnectiondetailstoconfigrefwithname)
      * [`obj spec.publishConnectionDetailsTo.configRef.policy`](#obj-specpublishconnectiondetailstoconfigrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolve)
    * [`obj spec.publishConnectionDetailsTo.metadata`](#obj-specpublishconnectiondetailstometadata)
      * [`fn withAnnotations(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotations)
      * [`fn withAnnotationsMixin(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotationsmixin)
      * [`fn withLabels(labels)`](#fn-specpublishconnectiondetailstometadatawithlabels)
      * [`fn withLabelsMixin(labels)`](#fn-specpublishconnectiondetailstometadatawithlabelsmixin)
      * [`fn withType(type)`](#fn-specpublishconnectiondetailstometadatawithtype)
  * [`obj spec.writeConnectionSecretToRef`](#obj-specwriteconnectionsecrettoref)
    * [`fn withName(name)`](#fn-specwriteconnectionsecrettorefwithname)
    * [`fn withNamespace(namespace)`](#fn-specwriteconnectionsecrettorefwithnamespace)

## Fields

### fn new

```ts
new(name)
```

new returns an instance of SiteRecoveryProtectionContainerMapping

## obj metadata

"ObjectMeta is metadata that all persisted resources must have, which includes all objects users must create."

### fn metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

### fn metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

**Note:** This function appends passed data to existing values

### fn metadata.withClusterName

```ts
withClusterName(clusterName)
```

"The name of the cluster which the object belongs to. This is used to distinguish resources with same name and namespace in different clusters. This field is not set anywhere right now and apiserver is going to ignore it if set in create or update request."

### fn metadata.withCreationTimestamp

```ts
withCreationTimestamp(creationTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withDeletionGracePeriodSeconds

```ts
withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)
```

"Number of seconds allowed for this object to gracefully terminate before it will be removed from the system. Only set when deletionTimestamp is also set. May only be shortened. Read-only."

### fn metadata.withDeletionTimestamp

```ts
withDeletionTimestamp(deletionTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withFinalizers

```ts
withFinalizers(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

### fn metadata.withFinalizersMixin

```ts
withFinalizersMixin(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

**Note:** This function appends passed data to existing values

### fn metadata.withGenerateName

```ts
withGenerateName(generateName)
```

"GenerateName is an optional prefix, used by the server, to generate a unique name ONLY IF the Name field has not been provided. If this field is used, the name returned to the client will be different than the name passed. This value will also be combined with a unique suffix. The provided value has the same validation rules as the Name field, and may be truncated by the length of the suffix required to make the value unique on the server.\n\nIf this field is specified and the generated name exists, the server will NOT return a 409 - instead, it will either return 201 Created or 500 with Reason ServerTimeout indicating a unique name could not be found in the time allotted, and the client should retry (optionally after the time indicated in the Retry-After header).\n\nApplied only if Name is not specified. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#idempotency"

### fn metadata.withGeneration

```ts
withGeneration(generation)
```

"A sequence number representing a specific generation of the desired state. Populated by the system. Read-only."

### fn metadata.withLabels

```ts
withLabels(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

### fn metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

**Note:** This function appends passed data to existing values

### fn metadata.withName

```ts
withName(name)
```

"Name must be unique within a namespace. Is required when creating resources, although some resources may allow a client to request the generation of an appropriate name automatically. Name is primarily intended for creation idempotence and configuration definition. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/identifiers#names"

### fn metadata.withNamespace

```ts
withNamespace(namespace)
```

"Namespace defines the space within which each name must be unique. An empty namespace is equivalent to the \"default\" namespace, but \"default\" is the canonical representation. Not all objects are required to be scoped to a namespace - the value of this field for those objects will be empty.\n\nMust be a DNS_LABEL. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/namespaces"

### fn metadata.withOwnerReferences

```ts
withOwnerReferences(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

### fn metadata.withOwnerReferencesMixin

```ts
withOwnerReferencesMixin(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

**Note:** This function appends passed data to existing values

### fn metadata.withResourceVersion

```ts
withResourceVersion(resourceVersion)
```

"An opaque value that represents the internal version of this object that can be used by clients to determine when objects have changed. May be used for optimistic concurrency, change detection, and the watch operation on a resource or set of resources. Clients must treat these values as opaque and passed unmodified back to the server. They may only be valid for a particular resource or set of resources.\n\nPopulated by the system. Read-only. Value must be treated as opaque by clients and . More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency"

### fn metadata.withSelfLink

```ts
withSelfLink(selfLink)
```

"SelfLink is a URL representing this object. Populated by the system. Read-only.\n\nDEPRECATED Kubernetes will stop propagating this field in 1.20 release and the field is planned to be removed in 1.21 release."

### fn metadata.withUid

```ts
withUid(uid)
```

"UID is the unique in time and space value for this object. It is typically generated by the server on successful creation of a resource and is not allowed to change on PUT operations.\n\nPopulated by the system. Read-only. More info: http://kubernetes.io/docs/user-guide/identifiers#uids"

## obj spec

"SiteRecoveryProtectionContainerMappingSpec defines the desired state of SiteRecoveryProtectionContainerMapping"

### fn spec.withDeletionPolicy

```ts
withDeletionPolicy(deletionPolicy)
```

"DeletionPolicy specifies what will happen to the underlying external when this managed resource is deleted - either \"Delete\" or \"Orphan\" the external resource."

## obj spec.forProvider



### fn spec.forProvider.withAutomaticUpdate

```ts
withAutomaticUpdate(automaticUpdate)
```

"a automatic_update block defined as below."

### fn spec.forProvider.withAutomaticUpdateMixin

```ts
withAutomaticUpdateMixin(automaticUpdate)
```

"a automatic_update block defined as below."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withRecoveryFabricName

```ts
withRecoveryFabricName(recoveryFabricName)
```

"Name of fabric that should contains the protection container to map. Changing this forces a new resource to be created."

### fn spec.forProvider.withRecoveryReplicationPolicyId

```ts
withRecoveryReplicationPolicyId(recoveryReplicationPolicyId)
```

"Id of the policy to use for this mapping. Changing this forces a new resource to be created."

### fn spec.forProvider.withRecoverySourceProtectionContainerName

```ts
withRecoverySourceProtectionContainerName(recoverySourceProtectionContainerName)
```

"Name of the source protection container to map. Changing this forces a new resource to be created."

### fn spec.forProvider.withRecoveryTargetProtectionContainerId

```ts
withRecoveryTargetProtectionContainerId(recoveryTargetProtectionContainerId)
```

"Id of target protection container to map to. Changing this forces a new resource to be created."

### fn spec.forProvider.withRecoveryVaultName

```ts
withRecoveryVaultName(recoveryVaultName)
```

"The name of the vault that should be updated. Changing this forces a new resource to be created."

### fn spec.forProvider.withResourceGroupName

```ts
withResourceGroupName(resourceGroupName)
```

"Name of the resource group where the vault that should be updated is located. Changing this forces a new resource to be created."

## obj spec.forProvider.automaticUpdate

"a automatic_update block defined as below."

### fn spec.forProvider.automaticUpdate.withAutomationAccountId

```ts
withAutomationAccountId(automationAccountId)
```

"The automation account ID which holds the automatic update runbook and authenticates to Azure resources."

### fn spec.forProvider.automaticUpdate.withEnabled

```ts
withEnabled(enabled)
```

"Should the Mobility service installed on Azure virtual machines be automatically updated. Defaults to false."

## obj spec.forProvider.recoveryFabricNameRef

"Reference to a SiteRecoveryFabric in recoveryservices to populate recoveryFabricName."

### fn spec.forProvider.recoveryFabricNameRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.recoveryFabricNameRef.policy

"Policies for referencing."

### fn spec.forProvider.recoveryFabricNameRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required. The default is 'Required', which means the reconcile will fail if the reference cannot be resolved. 'Optional' means this reference will be a no-op if it cannot be resolved."

### fn spec.forProvider.recoveryFabricNameRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default is 'IfNotPresent', which will attempt to resolve the reference only when the corresponding field is not present. Use 'Always' to resolve the reference on every reconcile."

## obj spec.forProvider.recoveryFabricNameSelector

"Selector for a SiteRecoveryFabric in recoveryservices to populate recoveryFabricName."

### fn spec.forProvider.recoveryFabricNameSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference as the selecting object is selected."

### fn spec.forProvider.recoveryFabricNameSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.recoveryFabricNameSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.recoveryFabricNameSelector.policy

"Policies for selection."

### fn spec.forProvider.recoveryFabricNameSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required. The default is 'Required', which means the reconcile will fail if the reference cannot be resolved. 'Optional' means this reference will be a no-op if it cannot be resolved."

### fn spec.forProvider.recoveryFabricNameSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default is 'IfNotPresent', which will attempt to resolve the reference only when the corresponding field is not present. Use 'Always' to resolve the reference on every reconcile."

## obj spec.forProvider.recoveryReplicationPolicyIdRef

"Reference to a SiteRecoveryReplicationPolicy in recoveryservices to populate recoveryReplicationPolicyId."

### fn spec.forProvider.recoveryReplicationPolicyIdRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.recoveryReplicationPolicyIdRef.policy

"Policies for referencing."

### fn spec.forProvider.recoveryReplicationPolicyIdRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required. The default is 'Required', which means the reconcile will fail if the reference cannot be resolved. 'Optional' means this reference will be a no-op if it cannot be resolved."

### fn spec.forProvider.recoveryReplicationPolicyIdRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default is 'IfNotPresent', which will attempt to resolve the reference only when the corresponding field is not present. Use 'Always' to resolve the reference on every reconcile."

## obj spec.forProvider.recoveryReplicationPolicyIdSelector

"Selector for a SiteRecoveryReplicationPolicy in recoveryservices to populate recoveryReplicationPolicyId."

### fn spec.forProvider.recoveryReplicationPolicyIdSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference as the selecting object is selected."

### fn spec.forProvider.recoveryReplicationPolicyIdSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.recoveryReplicationPolicyIdSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.recoveryReplicationPolicyIdSelector.policy

"Policies for selection."

### fn spec.forProvider.recoveryReplicationPolicyIdSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required. The default is 'Required', which means the reconcile will fail if the reference cannot be resolved. 'Optional' means this reference will be a no-op if it cannot be resolved."

### fn spec.forProvider.recoveryReplicationPolicyIdSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default is 'IfNotPresent', which will attempt to resolve the reference only when the corresponding field is not present. Use 'Always' to resolve the reference on every reconcile."

## obj spec.forProvider.recoverySourceProtectionContainerNameRef

"Reference to a SiteRecoveryProtectionContainer in recoveryservices to populate recoverySourceProtectionContainerName."

### fn spec.forProvider.recoverySourceProtectionContainerNameRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.recoverySourceProtectionContainerNameRef.policy

"Policies for referencing."

### fn spec.forProvider.recoverySourceProtectionContainerNameRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required. The default is 'Required', which means the reconcile will fail if the reference cannot be resolved. 'Optional' means this reference will be a no-op if it cannot be resolved."

### fn spec.forProvider.recoverySourceProtectionContainerNameRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default is 'IfNotPresent', which will attempt to resolve the reference only when the corresponding field is not present. Use 'Always' to resolve the reference on every reconcile."

## obj spec.forProvider.recoverySourceProtectionContainerNameSelector

"Selector for a SiteRecoveryProtectionContainer in recoveryservices to populate recoverySourceProtectionContainerName."

### fn spec.forProvider.recoverySourceProtectionContainerNameSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference as the selecting object is selected."

### fn spec.forProvider.recoverySourceProtectionContainerNameSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.recoverySourceProtectionContainerNameSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.recoverySourceProtectionContainerNameSelector.policy

"Policies for selection."

### fn spec.forProvider.recoverySourceProtectionContainerNameSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required. The default is 'Required', which means the reconcile will fail if the reference cannot be resolved. 'Optional' means this reference will be a no-op if it cannot be resolved."

### fn spec.forProvider.recoverySourceProtectionContainerNameSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default is 'IfNotPresent', which will attempt to resolve the reference only when the corresponding field is not present. Use 'Always' to resolve the reference on every reconcile."

## obj spec.forProvider.recoveryTargetProtectionContainerIdRef

"Reference to a SiteRecoveryProtectionContainer in recoveryservices to populate recoveryTargetProtectionContainerId."

### fn spec.forProvider.recoveryTargetProtectionContainerIdRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.recoveryTargetProtectionContainerIdRef.policy

"Policies for referencing."

### fn spec.forProvider.recoveryTargetProtectionContainerIdRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required. The default is 'Required', which means the reconcile will fail if the reference cannot be resolved. 'Optional' means this reference will be a no-op if it cannot be resolved."

### fn spec.forProvider.recoveryTargetProtectionContainerIdRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default is 'IfNotPresent', which will attempt to resolve the reference only when the corresponding field is not present. Use 'Always' to resolve the reference on every reconcile."

## obj spec.forProvider.recoveryTargetProtectionContainerIdSelector

"Selector for a SiteRecoveryProtectionContainer in recoveryservices to populate recoveryTargetProtectionContainerId."

### fn spec.forProvider.recoveryTargetProtectionContainerIdSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference as the selecting object is selected."

### fn spec.forProvider.recoveryTargetProtectionContainerIdSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.recoveryTargetProtectionContainerIdSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.recoveryTargetProtectionContainerIdSelector.policy

"Policies for selection."

### fn spec.forProvider.recoveryTargetProtectionContainerIdSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required. The default is 'Required', which means the reconcile will fail if the reference cannot be resolved. 'Optional' means this reference will be a no-op if it cannot be resolved."

### fn spec.forProvider.recoveryTargetProtectionContainerIdSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default is 'IfNotPresent', which will attempt to resolve the reference only when the corresponding field is not present. Use 'Always' to resolve the reference on every reconcile."

## obj spec.forProvider.recoveryVaultNameRef

"Reference to a Vault in recoveryservices to populate recoveryVaultName."

### fn spec.forProvider.recoveryVaultNameRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.recoveryVaultNameRef.policy

"Policies for referencing."

### fn spec.forProvider.recoveryVaultNameRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required. The default is 'Required', which means the reconcile will fail if the reference cannot be resolved. 'Optional' means this reference will be a no-op if it cannot be resolved."

### fn spec.forProvider.recoveryVaultNameRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default is 'IfNotPresent', which will attempt to resolve the reference only when the corresponding field is not present. Use 'Always' to resolve the reference on every reconcile."

## obj spec.forProvider.recoveryVaultNameSelector

"Selector for a Vault in recoveryservices to populate recoveryVaultName."

### fn spec.forProvider.recoveryVaultNameSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference as the selecting object is selected."

### fn spec.forProvider.recoveryVaultNameSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.recoveryVaultNameSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.recoveryVaultNameSelector.policy

"Policies for selection."

### fn spec.forProvider.recoveryVaultNameSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required. The default is 'Required', which means the reconcile will fail if the reference cannot be resolved. 'Optional' means this reference will be a no-op if it cannot be resolved."

### fn spec.forProvider.recoveryVaultNameSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default is 'IfNotPresent', which will attempt to resolve the reference only when the corresponding field is not present. Use 'Always' to resolve the reference on every reconcile."

## obj spec.forProvider.resourceGroupNameRef

"Reference to a ResourceGroup in azure to populate resourceGroupName."

### fn spec.forProvider.resourceGroupNameRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.resourceGroupNameRef.policy

"Policies for referencing."

### fn spec.forProvider.resourceGroupNameRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required. The default is 'Required', which means the reconcile will fail if the reference cannot be resolved. 'Optional' means this reference will be a no-op if it cannot be resolved."

### fn spec.forProvider.resourceGroupNameRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default is 'IfNotPresent', which will attempt to resolve the reference only when the corresponding field is not present. Use 'Always' to resolve the reference on every reconcile."

## obj spec.forProvider.resourceGroupNameSelector

"Selector for a ResourceGroup in azure to populate resourceGroupName."

### fn spec.forProvider.resourceGroupNameSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference as the selecting object is selected."

### fn spec.forProvider.resourceGroupNameSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.resourceGroupNameSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.resourceGroupNameSelector.policy

"Policies for selection."

### fn spec.forProvider.resourceGroupNameSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required. The default is 'Required', which means the reconcile will fail if the reference cannot be resolved. 'Optional' means this reference will be a no-op if it cannot be resolved."

### fn spec.forProvider.resourceGroupNameSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default is 'IfNotPresent', which will attempt to resolve the reference only when the corresponding field is not present. Use 'Always' to resolve the reference on every reconcile."

## obj spec.providerConfigRef

"ProviderConfigReference specifies how the provider that will be used to create, observe, update, and delete this managed resource should be configured."

### fn spec.providerConfigRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.providerConfigRef.policy

"Policies for referencing."

### fn spec.providerConfigRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required. The default is 'Required', which means the reconcile will fail if the reference cannot be resolved. 'Optional' means this reference will be a no-op if it cannot be resolved."

### fn spec.providerConfigRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default is 'IfNotPresent', which will attempt to resolve the reference only when the corresponding field is not present. Use 'Always' to resolve the reference on every reconcile."

## obj spec.providerRef

"ProviderReference specifies the provider that will be used to create, observe, update, and delete this managed resource. Deprecated: Please use ProviderConfigReference, i.e. `providerConfigRef`"

### fn spec.providerRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.providerRef.policy

"Policies for referencing."

### fn spec.providerRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required. The default is 'Required', which means the reconcile will fail if the reference cannot be resolved. 'Optional' means this reference will be a no-op if it cannot be resolved."

### fn spec.providerRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default is 'IfNotPresent', which will attempt to resolve the reference only when the corresponding field is not present. Use 'Always' to resolve the reference on every reconcile."

## obj spec.publishConnectionDetailsTo

"PublishConnectionDetailsTo specifies the connection secret config which contains a name, metadata and a reference to secret store config to which any connection details for this managed resource should be written. Connection details frequently include the endpoint, username, and password required to connect to the managed resource."

### fn spec.publishConnectionDetailsTo.withName

```ts
withName(name)
```

"Name is the name of the connection secret."

## obj spec.publishConnectionDetailsTo.configRef

"SecretStoreConfigRef specifies which secret store config should be used for this ConnectionSecret."

### fn spec.publishConnectionDetailsTo.configRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.publishConnectionDetailsTo.configRef.policy

"Policies for referencing."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required. The default is 'Required', which means the reconcile will fail if the reference cannot be resolved. 'Optional' means this reference will be a no-op if it cannot be resolved."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default is 'IfNotPresent', which will attempt to resolve the reference only when the corresponding field is not present. Use 'Always' to resolve the reference on every reconcile."

## obj spec.publishConnectionDetailsTo.metadata

"Metadata is the metadata for connection secret."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations are the annotations to be added to connection secret. - For Kubernetes secrets, this will be used as \"metadata.annotations\". - It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations are the annotations to be added to connection secret. - For Kubernetes secrets, this will be used as \"metadata.annotations\". - It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withLabels

```ts
withLabels(labels)
```

"Labels are the labels/tags to be added to connection secret. - For Kubernetes secrets, this will be used as \"metadata.labels\". - It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Labels are the labels/tags to be added to connection secret. - For Kubernetes secrets, this will be used as \"metadata.labels\". - It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withType

```ts
withType(type)
```

"Type is the SecretType for the connection secret. - Only valid for Kubernetes Secret Stores."

## obj spec.writeConnectionSecretToRef

"WriteConnectionSecretToReference specifies the namespace and name of a Secret to which any connection details for this managed resource should be written. Connection details frequently include the endpoint, username, and password required to connect to the managed resource. This field is planned to be replaced in a future release in favor of PublishConnectionDetailsTo. Currently, both could be set independently and connection details would be published to both without affecting each other."

### fn spec.writeConnectionSecretToRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.writeConnectionSecretToRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."